WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111820
WebPage::scaledSnapshotWithOptions returns a corrupt snapshot if you request a rect larger than the FrameView’s size
https://bugs.webkit.org/show_bug.cgi?id=111820
Summary
WebPage::scaledSnapshotWithOptions returns a corrupt snapshot if you request ...
Tim Horton
Reported
2013-03-07 21:46:14 PST
We have to clear the image if there’s area that won’t be painted by the FrameView. <
rdar://problem/13375785
>
Attachments
patch
(1.54 KB, patch)
2013-03-07 21:49 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(1.51 KB, patch)
2013-03-07 22:00 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-03-07 21:49:46 PST
Created
attachment 192143
[details]
patch
Tim Horton
Comment 2
2013-03-07 21:51:38 PST
Wait, the coordinates are mixed up.
Tim Horton
Comment 3
2013-03-07 21:56:00 PST
Maybe we should just unconditionally clear the image — FrameView has the ability to have a non-opaque background, which would still be broken with the “if there’s area that won’t be painted by the FrameView” approach.
Simon Fraser (smfr)
Comment 4
2013-03-07 21:59:57 PST
I think always clearing the image is fine.
Tim Horton
Comment 5
2013-03-07 22:00:59 PST
Created
attachment 192145
[details]
patch
Tim Horton
Comment 6
2013-03-10 23:32:26 PDT
http://trac.webkit.org/changeset/145341
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug