WebPage::scaledSnapshotWithOptions returns a corrupt snapshot if you request a rect larger than the FrameView’s size https://bugs.webkit.org/show_bug.cgi?id=111820 <rdar://problem/13375785>

Reviewed by Simon Fraser.

We have to clear the image - there could be area that won’t be painted by the FrameView,
or the FrameView could have a transparent background.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::scaledSnapshotWithOptions):


git-svn-id: svn://svn.chromium.org/blink/trunk@145341 bbb929c8-8fbe-4397-9dbb-9b2b20218538